sites/all/themes/titan/local.css
/* ... */
#block-views-research_highlights-block .inner {
  height: 400px;
  background-image: linear-gradient( rgb(32, 60, 93), transparent, rgb(32, 60, 93) );
}

#block-views-research_highlights-block .node-teaser,
#block-views-block-views-publications-block_2 .node-teaser {
  position: absolute;
  bottom: 0;
  margin-bottom: 0;
  width: 265px;
}

.front #block-views-events-block .inner > h2,
.front #block-views-events-block_1 .inner > h2 {
  padding: 10px 0 0 0;
  background-color: transparent;
}

.front #block-views-events-block .inner .field-name-field-location,
.front #block-views-events-block .inner .field-name-field-date,
.front #block-views-events-block .inner .field-name-field-event-image,
.front #block-views-events-block_1 .inner .field-name-field-location,
.front #block-views-events-block_1 .inner .field-name-field-date,
.front #block-views-events-block_1 .inner .field-name-field-event-image {
  display: none;
}

.front #block-views-events-block,
.front #block-views-events-block_1 {
  width: 306px;
  height: 400px;
  background-color: rgb(46, 73, 112);
}

.front #block-views-publications-block_2 .view-empty,
.front #block-views-events-block .view-empty {
  margin: 0 20px;
  border-top: 1px solid rgb(255, 255, 255);
}

.front #block-views-research_highlights-block,
.front #block-views-publications-block_2 {
  width: 305px;
  height: 400px;
  background-color: rgb(46, 73, 112);
}

.front .field-name-field-research-highlight-image {
  padding: 0;
  background-color: transparent;
  border: none;
}

.front #block-views-events-block h2,
.front #block-views-research_highlights-block h2,
.front #block-views-publications-block_2 h2 {
  font-size: 18px;
  color: rgb(255, 255, 255);
  text-align: center;
  padding-top: 10px;
  margin-top: 0;
}

.front #block-views-events-block h2.node-title,
.front #block-views-research_highlights-block h2.node-title,
.front #block-views-publications-block_2 h2.node-title {
  line-height: 18px;
  text-align: left;
  padding: 0;
}


.front #block-views-events-block p,
.front #block-views-events-block h2.node-title a,
.front #block-views-research_highlights-block p,
.front #block-views-research_highlights-block h2.node-title a,
.front #block-views-publications-block_2 p,
.front #block-views-publications-block_2 h2.node-title a {
  line-height: 18px;
  color: rgb(255, 255, 255);
}

.front #block-views-publications-block_2 div {
  color: rgb(255, 255, 255);
}

.front #block-views-publications-block_2 .views-row {
  line-height: 18px;
}

.front #block-views-publications-block_2 .views-row-first {
  padding-top: 25px;
}

.front #block-views-research_highlights-block h2.node-title a,
.front #block-views-publications-block_2 h2.node-title a {
  font-size: 14px;
}

.front .views-row-last {
  border-top: 1px solid rgb(255, 255, 255);
}

.front .view-events .views-row {
  border-top: none;
}

.front .view-events .views-row .node-header {
  margin-bottom: 20px;
}

.front #block-views-events-block a,
.front #block-views-publications-block_2 a,
.front #block-views-research_highlights-block a {
  color: rgb(255, 255, 255);
}

.front #block-views-events-block .date {
  float: none;
  text-transform: none;
  background: none;
  padding-left: 0;
  font-size: 14px;
}

.front #block-views-research_highlights-block .date,
.front #block-views-publications-block_2 .date {
  display: none;
}

.front .view-research-highlights {
  margin-bottom: 16px;
}

.front .view-research-highlights .views-row {
  height: 353px;
  position: relative;
}

.front .view-publications .views-row {
  height: 353px;
  position: relative;
}

.front #block-views-events-block .view-content,
.front #block-views-research_highlights-block .view-content,
.front #block-views-publications-block_2 .view-content {
  padding: 0 20px;
}

.front #block-views-events-block .date .year,
.front #block-views-events-block .date .month,
.front #block-views-events-block .date .day {
  color: rgb(255, 255, 255);
  font-weight: bold;
}

.front #block-views-events-block .date .year {
  top: 0;
  display: inline;
}

.front #block-views-events-block .node {
  margin-bottom: 0;
  border-top: 1px solid rgb(255, 255, 255);
}

.front #block-views-events-block,
.front #block-views-research_highlights-block,
.front #block-views-publications-block_2 {
  float: left;
}

.front #block-views-events-block,
.front #block-views-publications-block_2 {
  margin-left: 22px;
}

.front #block-views-events-block .node.indent .title-and-meta,
.front #block-views-research_highlights-block .node.indent .title-and-meta,
.front #block-views-research_highlights-block .node.indent .content,
.front #block-views-publications-block_2 .node.indent .title-and-meta,
.front #block-views-publications-block_2 .node.indent .content {
  margin-left: 0;
}

.front #block-views-events-block .node.indent .title-and-meta a {
  font-size: 14px;
  font-weight: normal;
}

.front .node-event .field-name-body {
  display: none;
}

.front #block-views-research_highlights-block .field-name-field-media img,
.front #block-views-featured_scientists-block .field-name-field-featured-scientist-media img {
  float: left;
  margin: 5px 15px 5px 5px;
}

.front #block-views-events-block .links-wrapper {
  display: none;
}

.front #block-views-events-block .node-header {
  line-height: 18px;
}

.front #block-views-banner-block {
  background-color: rgb(46, 73, 112);
  margin-bottom: 20px;
}

.front .views-field.views-field-field-banner-image {
  width: 654px;
  height: 282px;
  float: left;
}

.front .views-field-field-link a {
  color: rgb(144, 173, 61);
  font-size: 14px;
  padding: 0 20px 0 20px;
  position: relative;
  top: 10px;
}

.front .views-slideshow-cycle-main-frame-row .views-field.views-field-title {
  color: rgb(255, 255, 255);
  width: 266px;
  padding: 15px 20px 15px 20px;
  float: right;
  font-size: 18px;
  font-weight: bold;
}
/* ... */

